--- a/css/custom.css
+++ b/css/custom.css
@@ -1,5 +1,10 @@
+body {
+  background-color: black;
+}
+
+
 canvas {
-  border: 1px solid black;
+  border: 2px solid blue;
 }
 
 .vertical-center {
