--- a/css/custom.css
+++ b/css/custom.css
@@ -1,10 +1,12 @@
 body {
   background-color: black;
+  color: white;
+  font-family:'Press Start 2P', Serif;
 }
 
 
 canvas {
-  border: 2px solid blue;
+  border: 3px solid blue;
 }
 
 .vertical-center {
